# 3dtest

./: .gitignore  3DTest  CMakeLists.txt  Camera.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  glad.c  main.cpp  stbi.cpp  stbi.h
includes/glad/: glad.h
